Fix keys alignment in navigation (#955)
* Update KeysList.js

align keys icons with folder icons

* change css a bit

--- a/services/editor/src/pages/keys/components/KeysList/KeysList.less
+++ b/services/editor/src/pages/keys/components/KeysList/KeysList.less
@@ -64,6 +64,7 @@
     .key-link {
       color: white;
       font-size: 14px;
+      margin-left: -6px;
       padding-top: 6px;
       display: block;
       height: 25px;
@@ -96,8 +97,8 @@
 
   .key-type {
     display: inline-block;
-    width: 30px;
-    height: 30px;
+    width: 27px;
+    height: 27px;
     background: rgba(215, 215, 215, 0) no-repeat center center;
     background-size: cover;
     &[data-value-type=archived] {
@@ -137,6 +138,7 @@
       background-image: @object_icon;
       background-size: 55% 55%;
     }
+    background-position: 45% 45%;
   }
 }
 
